# apple

./: .gitignore  .hlint.yaml  ASM.md  CASES.md  CHANGELOG.md  EXISTENTIAL.md  FEATURES.md  IDIOMS.md  LICENSE  LITERATURE.md  LOOPING.md  MATRIX.md  MEM.md  Makefile  POW.md  QUICKCHECK.md  README.md  RELEASE.md  ROSETTA.md  SIMD.md  STUDY.md  TILING.md  TODO.md  apple.cabal  cabal.project  g.gdb  llvm.txt
ABI/: stack.md
R/: README.md  Rbench.R  apple.R  map.R  math.R  test.R
Rc/: Makefile  README.md  appler.c
app/: Main.hs
as/: As.hs  H.hs  Nasm.hs
bench/: Bench.cpphs  Bench.hs
bench/apple/: cat.🍏  convMax.🍏  evenIx.🍎  evens.🍎  maxWindow.🍎  scanmax.🍏  scanmaxf.🍏  vize.🍏
c/: apple.c  ffi.c  jit.h
color/: COLOR.md  hsi.🍎  rgb.🍎  yuv.🍎
doc/: Makefile  apple-by-example.html  apple-by-example.md  jupyter.html  user-guide.md
docs/: index.html
exe/: As.hs  Main.hs  Nasm.hs
include/: apple.h  apple_abi.h  apple_p.h  m.h
janet/: .gitignore  LITERATURE.md  Makefile  README.md  japple.c  project.janet
janet/test/: a.janet
lib/: E.chs
math/: amgm.🍏  bessel.🍏  chisqcdf.🍎  completeElliptic.🍎  erf.🍏  f11.🍎  fcdf.🍎  gamma.🍏  gammaln.🍏  gm.🍏  hypergeometric.🍏  log.🍏  n.🍏  ncdf.🍎  splitmix.🍏  t.🍏  tcdf.🍎  ztest.🍏
math/calculus/: simpsons.🍎
math/geo/: albers.🍏  bonne.🍏  mercator.🍏
math/ig/: hellinger.🍏  is.🍎  js.🍎
math/numbertheory/: factors.🍏  radical.🍎
math/poly/: d.🍏
math/stats/: covar.🍏  welch.🍎  whiten.🍏
mk/: os.mk
nb/: R.ipynb  besselR.ipynb  convolve.ipynb  csv.ipynb  deforestation.ipynb  dotprod.ipynb  fastmaxw.ipynb  gamma.ipynb  hist.ipynb  kl-perf.ipynb  luhn.ipynb  mandel.ipynb  matplotlib.ipynb  mnist.ipynb  mul-perf.ipynb  orbit_apple.ipynb  polyglotXor.ipynb  randomWalk.ipynb  rosetta-simd.ipynb  rosetta-stats.ipynb  rosetta.ipynb  shoelace.ipynb  softmax.ipynb  vmul-perf.ipynb
of/: Test.hs
py/: apple_math.py  matplotlib_demo.ipynb
pyc/: Makefile  apple.c  applemodule.c
run/: Main.hs  QC.hs
src/: A.hs  Bits.hs  C.hs  CF.hs  CGen.hs  Dbg.hs  Dom.hs  I.hs  IR.hs  L.x  LI.hs  LR.hs  Name.hs  Nm.hs  Op.hs  P.hs  Parser.y  R.hs  Ty.hs  U.hs
src/A/: Eta.hs  Opt.hs
src/Asm/: .BB.hs.swp  Aarch64.hs  Ar.hs  BB.hs  CF.hs  G.hs  L.hs  LI.hs  M.hs  X86.hs
src/Asm/Aarch64/: .CF.hs.swp  B.hs  Byte.hs  CF.hs  Fr.hs  Guess.hs  LI.hs  Opt.hs  P.hs  T.hs
src/Asm/Ar/: P.hs
src/Asm/X86/: Alloc.hs  B.hs  BB.hs  Byte.hs  CF.hs  Color.hs  Frame.hs  G.hs  LI.hs  Opt.hs  P.hs  Sp.hs  Trans.hs
src/C/: Alloc.hs  CF.hs  FP.hs  Loop.hs  Trans.hs
src/CF/: AL.hs
src/Class/: AEq.hs  E.hs
src/Data/: Copointed.hs
src/Hs/: A.hs  FFI.hsc
src/IR/: Alloc.hs  C.hs  CF.hs  CFA.hs  Hoist.hs  Opt.hs  Trans.hs
src/Nm/: IntMap.hs
src/Parser/: Rw.hs
src/Prettyprinter/: Ext.hs
src/R/: Dfn.hs  M.hs  R.hs
src/Sys/: DL.chs  DL.hs
src/Ty/: Clone.hs  M.hs
test/: Spec.cpphs  Spec.hs
test/data/: A.🍏  T.🍏  a.🍏  addRank.🍏  amgmGen.🍏  atanSeries.🍎  avgAll.🍏  bha.🍏  cat.🍏  cfLeft.🍏  coeffN.🍎  consSum.🍏  conv.🍏  convolve.🍎  dct32.🍎  debug.🍏  debug2.🍏  dix.🍎  dpo.🍏  dtss.🍏  farr.🍎  filt.🍎  forwardXor.🍎  gamma.🍏  gen.🍎  hiddenOutput.🍎  hiddenOutput.🍏  hist.🍎  log.🍎  m10.🍎  m6.🍎  maa.🍎  map.🍏  mfa.🍎  mul.🍏  mulT.🍏  omul.🍏  pf.🍎  polymorphic.🍎  prediction.🍎  (+20 more)
test/examples/: amgm.🍏  argmax.🍏  avg.🍎  b.🍎  burning.🍎  coeffs.🍎  continuedFraction.🍎  convolve.🍎  cube.🍎  dilogarithm.🍎  dist.🍎  dotprod.🍏  e.🍏  ellipticFourier.🍎  entropy.🍏  erf.🍏  erfSum.🍏  exp.🍏  expSum.🍏  fact.🍎  ffact.🍎  fib.🍏  fizzbuzz.🍎  forwardXor.py  gammaln.🍏  hypergeometric.🍏  hypergeometricEfficient.🍏  isPrime.🍏  isbn.🍎  isbn10.🍏  isbn13.🍎  kl.🍎  linear.🍎  lnSeries.🍏  log.🍎  luhn.🍎  mandel.🍎  meshgrid.🍏  mnist.🍎  mul.🍏  (+20 more)
test/harness/: a_harness.c  aa_harness.c  aaa_harness.c  aaafa_harness.c  aaf_harness.c  aafa_harness.c  aaff_harness.c  af_harness.c  ai_harness.c  bha_harness.c  conv_harness.c  ff_harness.c  fff_harness.c  hyper_harness.c  ia_harness.c  ib_harness.c  iff_harness.c  ii_harness.c  orbit_harness.c  rank_harness.c  u_harness.c
test/py/: mat.py  mnist.py  polyglot.py  prime.py  py.py  trainXor.py  whiten.py  xor.py
test/py/xor/: a.py  m.py  n.py
tex/: .gitignore  abi.tex  type.tex
tex/papers/: .latexmkrc  alloc.bib  alloc.tex
vim/doc/: apple.txt
vim/ftdetect/: apple.vim
vim/ftplugin/: apple.vim
vim/syntax/: apple.vim
vim/syntax_checkers/apple/: atc.vim
vscode/: Makefile  language-configuration.dhall  package.dhall
vscode/syntaxes/: apple.dhall
zsh/: sdist
