cabal-version:   1.18
name:            apple
version:         0.1.0.0
license:         AGPL-3
license-file:    LICENSE
copyright:       Copyright: (c) 2022 Vanessa McHale
maintainer:      vamchale@gmail.com
author:          Vanessa McHale
synopsis:        Apple array language compiler
description:     Compiler for a typed, APL-inspired array language.
category:        Language, Array
build-type:      Simple
data-files:      ./c/apple.c
extra-doc-files:
    README.md
    CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/vmchale/apple

library
    exposed-modules:
        Dbg
        P
        A
        Ty
        Nm
        I
        L
        Parser
        CGen
        Hs.A
        Hs.FFI
        Sys.DL
        Prettyprinter.Ext

    build-tool-depends:
        alex:alex >=3.3.0.0, happy:happy, hsc2hs:hsc2hs, c2hs:c2hs

    hs-source-dirs:     src
    other-modules:
        CF
        LI
        R
        LR
        R.Dfn
        R.M
        R.R
        Parser.Rw
        Ty.Clone
        Ty.M
        A.Eta
        A.Opt
        U
        IR
        IR.Alloc
        IR.CF
        IR.Opt
        IR.Trans
        Class.E
        Data.Copointed
        Asm.Ar
        Asm.Ar.P
        Asm.L
        Asm.LI
        Asm.BB
        Asm.X86
        Asm.X86.B
        Asm.X86.Byte
        Asm.X86.CF
        Asm.X86.Opt
        Asm.X86.Frame
        Asm.X86.P
        Asm.X86.Sp
        Asm.X86.Trans
        Asm.Aarch64
        Asm.Aarch64.B
        Asm.Aarch64.Byte
        Asm.Aarch64.CF
        Asm.Aarch64.Fr
        Asm.Aarch64.P
        Asm.Aarch64.Opt
        Asm.Aarch64.T
        Asm.G
        Asm.M
        Asm.CF

    default-language:   Haskell2010
    other-extensions:
        DeriveGeneric DeriveAnyClass OverloadedStrings StandaloneDeriving
        RankNTypes FlexibleContexts DeriveFoldable DeriveFunctor
        ScopedTypeVariables TupleSections BinaryLiterals MagicHash
        MultiParamTypeClasses DeriveTraversable GeneralizedNewtypeDeriving

    ghc-options:        -Wall -fno-warn-missing-signatures -Wno-x-partial
    build-depends:
        base >=4.11 && <5,
        prettyprinter >=1.7.0,
        deepseq,
        text,
        mtl >=2.2.2,
        containers >=0.6.0.1,
        microlens,
        microlens-mtl >=0.1.8.0,
        array,
        bytestring,
        transformers,
        unix,
        split,
        extra >=1.7.4

    if !impl(ghc >=8.0)
        build-depends: semigroups

    if impl(ghc >=8.0)
        ghc-options:
            -Wincomplete-uni-patterns -Wincomplete-record-updates
            -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists

    if impl(ghc >=8.2)
        ghc-options: -Wcpp-undef

    if impl(ghc >=8.10)
        ghc-options: -Wunused-packages

    if impl(ghc >=9.2)
        ghc-options: -Wno-operator-whitespace-ext-conflict

foreign-library apple
    type:               native-shared
    build-tool-depends: c2hs:c2hs >=0.19.1
    hs-source-dirs:     lib
    other-modules:      E
    default-language:   Haskell2010
    include-dirs:       include
    install-includes:   apple.h
    ghc-options:        -Wall
    build-depends:
        base,
        apple,
        bytestring >=0.11.0.0,
        prettyprinter >=1.7.0,
        text

    lib-version-info:   1:0:0

    if os(windows)
        options: standalone

    if impl(ghc >=8.0)
        ghc-options:
            -Wincomplete-uni-patterns -Wincomplete-record-updates
            -Wredundant-constraints

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists

    if impl(ghc >=8.10)
        ghc-options: -Wunused-packages

executable atc
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:    Paths_apple
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base,
        apple,
        optparse-applicative >=0.13.0.0,
        bytestring

    if !impl(ghc >=8.0)
        build-depends: semigroups

    if impl(ghc >=8.0)
        ghc-options:
            -Wincomplete-uni-patterns -Wincomplete-record-updates
            -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists

    if impl(ghc >=8.2)
        ghc-options: -Wcpp-undef

    if impl(ghc >=8.10)
        ghc-options: -Wunused-packages

executable writeo
    main-is:          Main.hs
    hs-source-dirs:   exe
    other-modules:
        As
        Nasm
        Paths_apple

    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base,
        apple,
        optparse-applicative >=0.14.0.0,
        bytestring,
        prettyprinter,
        temporary,
        process,
        text

    if !impl(ghc >=8.0)
        build-depends: semigroups

    if impl(ghc >=8.0)
        ghc-options:
            -Wincomplete-uni-patterns -Wincomplete-record-updates
            -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists

    if impl(ghc >=8.2)
        ghc-options: -Wcpp-undef

    if impl(ghc >=8.10)
        ghc-options: -Wunused-packages

executable arepl
    main-is:          Main.hs
    hs-source-dirs:   run
    default-language: Haskell2010
    ghc-options:      -Wall -Wno-missing-signatures
    build-depends:
        base,
        apple,
        bytestring,
        libffi,
        prettyprinter,
        haskeline,
        mtl,
        transformers,
        text,
        directory,
        filepath,
        extra

    if !impl(ghc >=8.0)
        build-depends: semigroups

    if impl(ghc >=8.0)
        ghc-options:
            -Wincomplete-uni-patterns -Wincomplete-record-updates
            -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists

    if impl(ghc >=8.2)
        ghc-options: -Wcpp-undef

    if impl(ghc >=8.10)
        ghc-options: -Wunused-packages

test-suite apple-test
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    build-tool-depends: cpphs:cpphs
    hs-source-dirs:     test
    default-language:   Haskell2010
    ghc-options:
        -threaded -rtsopts -with-rtsopts=-N -Wall
        -fno-warn-missing-signatures

    build-depends:
        base,
        apple,
        tasty,
        tasty-hunit,
        bytestring,
        hypergeometric >=0.1.4.0

    if impl(ghc >=8.0)
        ghc-options:
            -Wincomplete-uni-patterns -Wincomplete-record-updates
            -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists

    if impl(ghc >=8.2)
        ghc-options: -Wcpp-undef

    if impl(ghc >=8.10)
        ghc-options: -Wunused-packages

benchmark apple-bench
    type:               exitcode-stdio-1.0
    main-is:            Bench.hs
    build-tool-depends: cpphs:cpphs
    hs-source-dirs:     bench
    default-language:   Haskell2010
    ghc-options:        -rtsopts -Wall
    build-depends:
        base,
        apple,
        criterion,
        bytestring,
        erf,
        hypergeometric >=0.1.1.0

    if impl(ghc >=8.0)
        ghc-options:
            -Wincomplete-uni-patterns -Wincomplete-record-updates
            -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists

    if impl(ghc >=8.2)
        ghc-options: -Wcpp-undef

    if impl(ghc >=8.10)
        ghc-options: -Wunused-packages
